fixing mobile spacing (need a way to test this without deploying)

--- a/sass/foo.casper/_foocasper.scss
+++ b/sass/foo.casper/_foocasper.scss
@@ -2638,8 +2638,9 @@ pre {
           }
           p {
             margin-top: 0;
+            margin-bottom: 4rem;
             padding-top: 0;
-            text-align: left;
+            text-align: center;
           }
         }
       }
